@@ -23,7 +23,7 @@ GMailS=Sign
 GMailSS=Sign and Send
 GMailC=Crypt
 GMailCS=Crypt and Send
-GMailSOK=Good sign from 
+GMailSOK=Good sign from
 GMailNoS=No signature found in this mail!
 GMailSErr=The first signature of this mail is not valid!
 GMailD=Decrypt this mail
@@ -32,4 +32,4 @@ exportFailed=Export failed. Unknown error.
 editorTitle=FireGPG's editor.
 editorDescription=Here you can edit and perform some operations on a text.
 whatIsNewTitle=What is new ?
-whatIsNewDescription=News of FireGPG :
+whatIsNewDescription=News of FireGPG :\n(An anonymous ping has been send to FireGPG's team for stats.)
