@@ -32,4 +32,4 @@ exportFailed=Erreur inconnue. L'exportation a échoué.
 editorTitle=Editeur de FireGPG.
 editorDescription=Vous pouvez ici traiter un texte.
 whatIsNewTitle=Nouveautés de FireGPG
-whatIsNewDescription=Voici les nouveautés de FireGPG (en anglais) :
+whatIsNewDescription=Voici les nouveautés de FireGPG (en anglais) :\n(Un ping anonyme à été envoyé à l'équipe de FireGPG pour des statisiques)
